umol-io/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@rdkit_0637_C_C=C_C=C=[C@@]=C=CO_ae52.smiles.snap
---
source: umol-io/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
opensmiles:
  success: false
  error:
    error_type: UnsupportedStereoBond
    message: unsupported stereo bond 3
