umol-io/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@rdkit_0654_C_C=C=C=C_C=C_C_3ef9.smiles.snap
---
source: umol-io/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
opensmiles:
  success: false
  error:
    error_type: UnsupportedStereoBond
    message: unsupported stereo bond 1
